# spotistats

./: .gitignore  prompt_plan.md  pyproject.toml  spec.md  todo.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  test_import.py
backend/src/: config.py  database.py  exceptions.py  logging_config.py  models.py  normalizer.py  spotify_client.py  spotify_data.py  utils.py
backend/tests/: test_config.py  test_database.py  test_error_handling.py  test_ingestion_logic.py  test_main.py  test_models.py  test_normalizer.py  test_podcast_ingestion.py  test_spotify_client.py  test_spotify_data.py
cubejs/: Dockerfile  README.md  cube.js  docker-compose.yml  package.json
cubejs/model/: Album.js  Artist.js  Listen.js  Track.js
cubejs/schema/: Album.js  Artist.js  Listen.js  Track.js
frontend/: jest.config.js  package.json
frontend/__mocks__/: chart.js.js  react-chartjs-2.js
frontend/src/: App.jsx  cubejs-client.js  main.jsx
frontend/src/components/: TasteEvolutionChart.jsx  TasteEvolutionChart.test.jsx
