[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"] # You can change this
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
psycopg2-binary = "*"
SQLAlchemy = "*"
python-dotenv = "*"
pyjwt = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
