[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"] # You can change this
readme = "README.md"
packages = [{include = "backend", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
psycopg2-binary = "*"
SQLAlchemy = "*"
python-dotenv = "*"
pyjwt = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
requests-mock = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
